--- a/package.json
+++ b/package.json
@@ -2,12 +2,17 @@
   "name": "madcat-kanjivg-ng",
   "version": "0.0.0",
   "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
+    "build": "run-s kanjivg-ng:build copy:* build:set-dist-version",
+    "kanjivg-ng:build": "npm run --prefix projects/kanjivg-ng build",
+    "copy": "run-p copy:*",
+    "copy:README": "cpy README.md dist/kanjivg-ng",
+    "copy:LICENSE": "cpy LICENSE dist/kanjivg-ng",
+    "build:set-dist-version": "ts-node set-dist-version.ts",
+    "test": "ng test kanjivg-ng",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "demo:serve": "ng serve demo",
+    "prepublishOnly": "echo \"Use 'npm run deploy' to publish this package\" && exit 1",
+    "deploy": "npm run build && npm publish dist/kanjivg-ng --access public --dry-run"
   },
   "private": true,
   "dependencies": {
@@ -19,17 +24,24 @@
     "@angular/platform-browser": "~10.0.3",
     "@angular/platform-browser-dynamic": "~10.0.3",
     "@angular/router": "~10.0.3",
+    "@madcat/kanjivg": "^2.0.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1000.2",
+    "@angular-devkit/build-ng-packagr": "~0.1000.2",
+    "@angular-devkit/core": "^10.0.2",
+    "@angular-devkit/schematics": "^10.0.2",
     "@angular/cli": "~10.0.2",
     "@angular/compiler-cli": "~10.0.3",
-    "@types/node": "^12.11.1",
+    "@schematics/angular": "^10.0.2",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cpy-cli": "^3.1.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -37,6 +49,8 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^10.0.0",
+    "npm-run-all": "^4.1.5",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
